# omni-lang

./: .gitignore  .gitlab-ci.yml  ARRAYS_IMPLEMENTATION.md  ARRAY_LEN_IMPLEMENTATION.md  ARRAY_METHOD_SYNTAX.md  BINARY_GENERATION_ANALYSIS.md  CHANGELOG.md  COMPILER_BACKEND_GAPS.md  CONSTANT_FOLDING_FIX.md  CONTRIBUTING.md  HANDOFF.md  LICENSE  MISSING_BASIC_FEATURES.md  Makefile  README.md  RELEASE_CHECKLIST.md  WHY_OMNILANG.md  async_example.txt  test_async.omni  test_output.txt
docker/: Dockerfile
docs/: ADVANCED_FEATURES.md  COMPETITIVE_ANALYSIS.md  EXAMPLES.md  NESTED_TYPES_WORKAROUND.md  README.md  RECENT_IMPROVEMENTS.md  ROADMAP.md  UNIT_TESTING.md  index.html  index.md  quick-reference.md  roadmap-visual.md
omni/: .gitignore  .gitlab-ci.yml  Makefile  debug_array_type  debug_array_type.omni  debug_parser.go  debug_test  debug_tokens  debug_type  debug_type.omni  debug_typechecker.go  go.mod  go.sum  omni  omnic  run_omnic.sh  safe_run.sh  simple_string_test.omni  simple_test  test_basic  test_binary  test_binary.mir  test_binary.omni  test_binary.s  test_binary_compile.sh  test_binary_features  test_binary_features.omni  test_c  test_complex_memory.mir  test_complex_union.mir  test_complex_union.omni  test_comprehensive  test_comprehensive.omni  test_custom_name  test_debug  test_debug_fix  test_debug_new.mir  test_debug_pointer_simple.omni  test_debug_pointer_union.mir  test_debug_union_only.mir  (+17 more)
omni/native/clift/: Cargo.toml
omni/native/clift/src/: lib.rs
packaging/: README.txt.tpl  RELEASE_NOTES.md.tpl  install.sh.tpl  uninstall.sh.tpl
(+826 files in other folders)
