[package]
name = "omni_clift"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cranelift-codegen = "0.103"
cranelift-frontend = "0.103"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[dev-dependencies]
anyhow = "1"
